2012-01-01  Doug Evans  <dje@google.com>

	* dwarf2read.c (dwarf2_per_objfile): Add comment.
	(dwarf2_elf_names): Minor reformat.
	(dwarf2_per_cu_data): Tweak comment.
	(dwarf2_read_section): Fix comment.
	(create_all_comp_units): Fix comment.
	(load_full_comp_unit): Fix comment.
	(process_full_comp_unit): Fix comment.
	(read_signatured_type): Fix comment.

2011-12-30  Doug Evans  <dje@google.com>

	* dwarf2read.c (read_typedef): Guard against self-referential typedefs.

2011-12-28  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdbarch.sh (max_insn_length): Extend the comment by unit.
	* gdbarch.h: Regenerate.

2011-12-28  Joel Brobecker  <brobecker@adacore.com>

	* varobj.c (varobj_update): Minor reformatting, putting the function
	name at the start of the next line.

2011-12-27  Doug Evans  <dje@google.com>

	* dwarf2read.c (struct dwarf2_cu): Delete members first_fn, last_fn,
	cached_fn.
	(struct function_range): Delete.
	(initialize_cu_func_list, add_to_cu_func_list): Delete.  All callers
	updated.
	(check_cu_functions): Ditto.

2011-12-27  Mark Kettenis  <kettenis@gnu.org>

	* inf-ptrace.c [PT_IO && PIOD_READ_AUXV]
	(inf_ptrace_xfer_partial): Implement TARGET_OBJECT_AUXV.
	(inf_ptrace_auxv_parse): New function.
	(inf_ptrace_target): Initialize to_auxv_parse field.

2011-12-27  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (should_use_wild_match): New function.
	(ada_lookup_simple_minsym): Use should_use_wild_match.
	Minor simplification.  Add comment.
	(ada_lookup_symbol_list): Use should_use_wild_match.
	Minor simplification.

2011-12-27  Joel Brobecker  <brobecker@adacore.com>

	* py-finishbreakpoint.c (bpfinishpy_init): Replace call to
	sprintf by call to xsnprintf.

2011-12-27  Joel Brobecker  <brobecker@adacore.com>

	* linespec.c (struct collect_minsyms) [list_mode]: New field.
	(add_minsym): Ignore data symbols if not in list mode.
	(search_minsyms_for_name): Set local.list_mode.

2011-12-27  Joel Brobecker  <brobecker@adacore.com>
