@@ -1,5 +1,8 @@
 2012-01-01  Doug Evans  <dje@google.com>
 
+	* dwarf2read.c (free_heap_comp_unit): Renamed from free_one_comp_unit.
+	All callers updated.
+
 	* dwarf2read.c (dwarf2_per_objfile): Add comment.
 	(dwarf2_elf_names): Minor reformat.
 	(dwarf2_per_cu_data): Tweak comment.
